--- a/NovoePokolenie/Views/Account/Login.cshtml
+++ b/NovoePokolenie/Views/Account/Login.cshtml
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/pokolenie.css">
+    <link rel="icon" type="image/x-icon" href="../img/logo.ico" />
     <title>Школа Инноваций "Новое Поколение"</title>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
             integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
